cmake_minimum_required(VERSION 3.24)
project(thread_pool)
set_property(GLOBAL PROPERTY RULE_LAUNCH_COMPILE ccache)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_STANDARD 23)
if (CMAKE_BUILD_TYPE STREQUAL "Debug")
    if (CMAKE_SYSTEM_NAME STREQUAL "Darwin")
        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O0 -fno-elide-constructors -Wall -fno-omit-frame-pointer -g")
        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0 -fno-elide-constructors -Wall -fno-omit-frame-pointer -g")
    elseif (CMAKE_SYSTEM_NAME STREQUAL "Linux")
        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O0 -fno-elide-constructors -Wall -fsanitize=address,leak,undefined -fno-omit-frame-pointer -g")
        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0 -fno-elide-constructors -Wall -fsanitize=address,leak,undefined -fno-omit-frame-pointer -g")
    endif ()
endif ()

add_executable(thread_pool thread_pool_main.cpp)
add_executable(thread_pool_performance thread_pool_performance_main.cpp)
